--- a/mandelbulber2/formula/ui/transf_difs_helix_menger.ui
+++ b/mandelbulber2/formula/ui/transf_difs_helix_menger.ui
@@ -1736,7 +1736,7 @@
          <number>2</number>
         </property>
         <item row="0" column="3">
-         <widget class="MySpinBox" name="spinboxInt_fold_color_stop_iterations_A_2">
+         <widget class="MySpinBox" name="spinboxInt_fold_color_stop_iterations_B">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
@@ -1947,7 +1947,7 @@
         <item row="3" column="0">
          <widget class="QLabel" name="label_192">
           <property name="text">
-           <string>iter add acale::</string>
+           <string>iter add scale:</string>
           </property>
          </widget>
         </item>
